--- a/React/travisha/package.json
+++ b/React/travisha/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "mdb-react-ui-kit": "^9.0.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
